# cppTraining

./: README.md
.github/workflows/: c-cpp.yml
scripts/: build.sh  buildRun.sh
src/: BasicSyntax.cpp  BasicSyntax.h  CMakeLists.txt  DataTypes.cpp  DataTypes.h  Functions.cpp  Functions.h  Operators.cpp  Operators.h  main.cpp
